# tp-ceia-amq

./: .gitignore  CriteriosAprobacion.md  LICENSE  README.md  env_example  pyproject.toml
data/processed/: costos_ref.parquet  destinos_unicos.parquet  lluvia_diaria_clean.parquet  resumen_hotspots.parquet  resumen_operativo_diario.parquet  sede_ref.parquet  servicio_sede_ref.parquet  tareas_clean.parquet  tiempos_resolucion_localidad.json  zona_cluster_resumen.parquet  zona_diario_base.parquet  zona_diario_baseline_metricas.parquet  zona_diario_baseline_t1.parquet  zonas_clusterizadas.parquet  zonas_geocoded.parquet
helpers/: __init__.py  contracts.py  costing.py  eda_utils.py  google_maps_cache.py  operational_refs.py  paths.py  rainfall_cleaning.py  reclamos_cleaning.py  reverse_geocode_zonas.py  tiempos_operativos.py  zona_diario.py
notebooks/: 1_ingesta_depuration.ipynb  2_lluvia_depuration.ipynb  3_costeo_ruteo.ipynb  4_exploracion.ipynb  5_tp_final_amq.ipynb
notebooks/.ipynb_checkpoints/: 2_lluvia_depuration-checkpoint.ipynb  3_costeo_ruteo-checkpoint.ipynb  4_exploracion-checkpoint.ipynb  (+1 more)
reports/: baseline_heuristico_summary.md  input_inventory.md  phase1_schema_findings.md  phase2_cleaning_audit.md  phase3_costing_outputs.md  phase3_operational_aggregates.md  phase3_rainfall_audit.md  phase3_reference_inputs.md  phase3_routing_automation.md  phase3_routing_prep.md  rain_feature_notes.md  verification_summary.md  workspace_cleanup_phase2.md  zona_diario_build_summary.md  zonas_geocoded_report.md  zone_clustering_decision.md
streamlit_app/: app.py
(+48 files in other folders)
