[project]
name = "amq-ceml-reclamos"
version = "0.1.0"
description = "Predicción de demanda operativa y priorización de inversión en infraestructura mediante aprendizaje automático en la CEML"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.7",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "streamlit-folium>=0.25.0",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "catboost",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
